--- a/style-editor-block-rtl.css
+++ b/style-editor-block-rtl.css
@@ -935,6 +935,15 @@
 	}
 }
 
+.wp-block-image .aligncenter,
+.wp-block-image .alignleft,
+.wp-block-image .alignright,
+.wp-block-image.aligncenter,
+.wp-block-image.alignleft,
+.wp-block-image.alignright {
+	display: table;
+}
+
 .wp-embed-responsive .editor-styles-wrapper {
 	padding-right: 16px;
 	padding-left: 16px;
